--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,13 @@ GSYMS
 *.exp
 *.manifest
 
+# misc workspace(s)
+.metadata
+.cproject
+.project
+.vscode
+RemoteSystemsTempFiles
+
 # /src/
 /src/.short_version
 /src/base/version.h
@@ -77,6 +84,35 @@ GSYMS
 /egs/*/s*/plp
 /egs/*/s*/exp
 /egs/*/s*/data
+
+# sre egs have v1,v2...
+/egs/sre*/v*/mfcc
+/egs/sre*/v*/plp
+/egs/sre*/v*/exp
+/egs/sre*/v*/data
+
+# ignore all non s<#> and v<#>
+/egs/*/[^sv]*
+/egs/*/[sv][^0-9]*
+/egs/*/[sv][0-9]_*
+
+/egs/wsj/s5/utils/afeka/
+/egs/wsj/s5/utils/phonetic_search/
+
+# new egs folders
+/egs/ACLP_Decoder/
+/egs/Farsi/
+/egs/Hebrew/
+/egs/Levantine_Arabic/
+/egs/Multilingual/
+/egs/OpenKWS2016/
+/egs/digits/
+
+# specific egs folders...
+/egs/aurora4/s5z/
+/egs/gale_arabic/s5bZ*/
+/egs/gale_arabic/s5z*/
+/egs/sre10/v2ruthi*/
 
 # /tools/
 /tools/ATLAS/
@@ -140,4 +176,14 @@ GSYMS
 /tools/phonetisaurus-g2p/
 /tools/mmseg-1.3.0.tar.gz
 /tools/mmseg-1.3.0/
+
+/tools/ffmpeg
+/tools/ffmpeg-git-20160504-64bit-static/
+/tools/ffmpeg-git-64bit-static.tar.xz
+/tools/kenlm/
+/tools/rnnlm-0.3e.tgz
+/tools/rnnlm-0.3e
+
 /kaldiwin_vs*
+
+
