--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ RemoteSystemsTempFiles
 /egs/gale_arabic/s5bZ*/
 /egs/gale_arabic/s5z*/
 /egs/gale_arabic/s5b_ella/
+/egs/gale_arabic/s5c_ella/
 /egs/sre10/v2ruthi*/
 
 # /tools/
